# tiny-guestbook

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
migrations/: 0001_create_guestbook_entries.sql
src/: db.rs  handlers.rs  main.rs  models.rs
static/: index.html  sign.html
static/css/: style.css
static/js/: app.js  review.js
