[package]
name = "guestbook"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "uuid"
] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
